assgn3/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DEFAULT
    CHAN
    CONSTANT
    CASE
    DEFER
    FALLTHROUGH
    SWITCH
    SELECT
    LMINUS
    AMPCAREQ
    GO
    DDD
    MAP
    INTERFACE

Grammar

Rule 0     S' -> start
Rule 1     start -> Source
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     Type -> LPAREN Type RPAREN
Rule 5     TypeName -> TYPEX
Rule 6     TypeLit -> ArrayType
Rule 7     TypeLit -> StructType
Rule 8     TypeLit -> PointerType
Rule 9     TypeLit -> FunctionType
Rule 10    TypeOpt -> Type
Rule 11    TypeOpt -> epsilon
Rule 12    ArrayType -> LBRACK ArrayLength RBRACK ElementType
Rule 13    ArrayLength -> Expression
Rule 14    ElementType -> Type
Rule 15    StructType -> STRUCT LBRACE FieldDeclRep RBRACE
Rule 16    FieldDeclRep -> FieldDeclRep FieldDecl SEMICOL
Rule 17    FieldDeclRep -> epsilon
Rule 18    FieldDecl -> IdentifierList Type TagOpt
Rule 19    TagOpt -> Tag
Rule 20    TagOpt -> epsilon
Rule 21    Tag -> STRING
Rule 22    PointerType -> TIMES BaseType
Rule 23    BaseType -> Type
Rule 24    FunctionType -> FUNC Signature
Rule 25    Signature -> Parameters ResultOpt
Rule 26    ResultOpt -> Result
Rule 27    ResultOpt -> epsilon
Rule 28    Result -> Parameters
Rule 29    Result -> Type
Rule 30    Parameters -> LPAREN ParameterListOpt RPAREN
Rule 31    ParameterListOpt -> ParametersList
Rule 32    ParameterListOpt -> epsilon
Rule 33    ParametersList -> Type
Rule 34    ParametersList -> IdentifierList Type
Rule 35    ParametersList -> ParameterDeclCommaRep
Rule 36    ParameterDeclCommaRep -> ParameterDeclCommaRep COMMA ParameterDecl
Rule 37    ParameterDeclCommaRep -> ParameterDecl COMMA ParameterDecl
Rule 38    ParameterDecl -> IdentifierList Type
Rule 39    ParameterDecl -> Type
Rule 40    Block -> LBRACE StatementList RBRACE
Rule 41    StatementList -> StatementRep
Rule 42    StatementRep -> StatementRep Statement SEMICOL
Rule 43    StatementRep -> epsilon
Rule 44    Declaration -> ConstDecl
Rule 45    Declaration -> TypeDecl
Rule 46    Declaration -> VarDecl
Rule 47    TopLevelDecl -> Declaration
Rule 48    TopLevelDecl -> FunctionDecl
Rule 49    ConstDecl -> CONST ConstSpec
Rule 50    ConstDecl -> CONST LPAREN ConstSpecRep RPAREN
Rule 51    ConstSpecRep -> ConstSpecRep ConstSpec SEMICOL
Rule 52    ConstSpecRep -> epsilon
Rule 53    ConstSpec -> IdentifierList TypeExprListOpt
Rule 54    TypeExprListOpt -> TypeOpt EQUAL ExpressionList
Rule 55    TypeExprListOpt -> epsilon
Rule 56    IdentifierList -> IDENTIFIER IdentifierRep
Rule 57    IdentifierRep -> IdentifierRep COMMA IDENTIFIER
Rule 58    IdentifierRep -> epsilon
Rule 59    TypeDecl -> TYPE TypeSpec
Rule 60    TypeDecl -> TYPE LPAREN TypeSpecRep RPAREN
Rule 61    TypeSpecRep -> TypeSpecRep TypeSpec SEMICOL
Rule 62    TypeSpecRep -> epsilon
Rule 63    TypeSpec -> AliasDecl
Rule 64    TypeSpec -> TypeDef
Rule 65    AliasDecl -> IDENTIFIER EQUAL Type
Rule 66    TypeDef -> IDENTIFIER Type
Rule 67    VarDecl -> VAR VarSpec
Rule 68    VarDecl -> VAR LPAREN VarSpecRep RPAREN
Rule 69    VarSpecRep -> VarSpecRep VarSpec SEMICOL
Rule 70    VarSpecRep -> epsilon
Rule 71    VarSpec -> IdentifierList Type ExpressionListOpt
Rule 72    VarSpec -> IdentifierList EQUAL ExpressionList
Rule 73    ExpressionListOpt -> EQUAL ExpressionList
Rule 74    ExpressionListOpt -> epsilon
Rule 75    ShortVarDecl -> IDENTIFIER COLONEQ Expression
Rule 76    FunctionDecl -> FUNC FunctionName Function
Rule 77    FunctionDecl -> FUNC FunctionName Signature
Rule 78    FunctionName -> IDENTIFIER
Rule 79    Function -> Signature FunctionBody
Rule 80    FunctionBody -> Block
Rule 81    Operand -> Literal
Rule 82    Operand -> OperandName
Rule 83    Operand -> LPAREN Expression RPAREN
Rule 84    Literal -> BasicLit
Rule 85    BasicLit -> IntLiteral
Rule 86    BasicLit -> FloatLiteral
Rule 87    BasicLit -> ImgLiteral
Rule 88    BasicLit -> RuneLiteral
Rule 89    BasicLit -> StringLiteral
Rule 90    IntLiteral -> INTEGER
Rule 91    FloatLiteral -> FLOAT
Rule 92    ImgLiteral -> IMAGINARY
Rule 93    RuneLiteral -> RUNE
Rule 94    StringLiteral -> STRING
Rule 95    OperandName -> IDENTIFIER
Rule 96    Conversion -> Type LPAREN Expression RPAREN
Rule 97    PrimaryExpr -> Operand
Rule 98    PrimaryExpr -> Conversion
Rule 99    PrimaryExpr -> PrimaryExpr Selector
Rule 100   PrimaryExpr -> PrimaryExpr Index
Rule 101   PrimaryExpr -> PrimaryExpr Slice
Rule 102   PrimaryExpr -> PrimaryExpr Arguments
Rule 103   Selector -> DOT IDENTIFIER
Rule 104   Index -> LBRACK Expression RBRACK
Rule 105   Slice -> LBRACK ExpressionOpt COLON ExpressionOpt RBRACK
Rule 106   Arguments -> LPAREN ExpressionListTypeOpt RPAREN
Rule 107   ExpressionListTypeOpt -> ExpressionList
Rule 108   ExpressionListTypeOpt -> epsilon
Rule 109   ExpressionList -> Expression ExpressionRep
Rule 110   ExpressionRep -> ExpressionRep COMMA Expression
Rule 111   ExpressionRep -> epsilon
Rule 112   Expression -> UnaryExpr
Rule 113   Expression -> Expression OROR Expression
Rule 114   Expression -> Expression AMPAMP Expression
Rule 115   Expression -> Expression EQEQ Expression
Rule 116   Expression -> Expression NOTEQ Expression
Rule 117   Expression -> Expression LESS Expression
Rule 118   Expression -> Expression GREAT Expression
Rule 119   Expression -> Expression LEQ Expression
Rule 120   Expression -> Expression GEQ Expression
Rule 121   Expression -> Expression PLUS Expression
Rule 122   Expression -> Expression MINUS Expression
Rule 123   Expression -> Expression OR Expression
Rule 124   Expression -> Expression CARET Expression
Rule 125   Expression -> Expression TIMES Expression
Rule 126   Expression -> Expression DIVIDE Expression
Rule 127   Expression -> Expression MOD Expression
Rule 128   Expression -> Expression AMPERS Expression
Rule 129   Expression -> Expression LL Expression
Rule 130   Expression -> Expression GG Expression
Rule 131   Expression -> Expression AMPCAR Expression
Rule 132   ExpressionOpt -> Expression
Rule 133   ExpressionOpt -> epsilon
Rule 134   UnaryExpr -> PrimaryExpr
Rule 135   UnaryExpr -> UnaryOp UnaryExpr
Rule 136   UnaryOp -> PLUS
Rule 137   UnaryOp -> MINUS
Rule 138   UnaryOp -> TIMES
Rule 139   UnaryOp -> AMPERS
Rule 140   UnaryOp -> NOT
Rule 141   Statement -> Declaration
Rule 142   Statement -> LabeledStmt
Rule 143   Statement -> SimpleStmt
Rule 144   Statement -> ReturnStmt
Rule 145   Statement -> BreakStmt
Rule 146   Statement -> ContinueStmt
Rule 147   Statement -> GotoStmt
Rule 148   Statement -> Block
Rule 149   Statement -> IfStmt
Rule 150   Statement -> ForStmt
Rule 151   SimpleStmt -> epsilon
Rule 152   SimpleStmt -> ExpressionStmt
Rule 153   SimpleStmt -> IncDecStmt
Rule 154   SimpleStmt -> Assignment
Rule 155   SimpleStmt -> ShortVarDecl
Rule 156   LabeledStmt -> Label COLON Statement
Rule 157   Label -> IDENTIFIER
Rule 158   ExpressionStmt -> Expression
Rule 159   IncDecStmt -> Expression PLUSPLUS
Rule 160   IncDecStmt -> Expression MINUSMIN
Rule 161   Assignment -> ExpressionList assign_op ExpressionList
Rule 162   assign_op -> AssignOp
Rule 163   AssignOp -> PLUSEQ
Rule 164   AssignOp -> MINUSEQ
Rule 165   AssignOp -> TIMESEQ
Rule 166   AssignOp -> DIVIDEEQ
Rule 167   AssignOp -> MODEQ
Rule 168   AssignOp -> AMPEQ
Rule 169   AssignOp -> OREQ
Rule 170   AssignOp -> CAREQ
Rule 171   AssignOp -> LLEQ
Rule 172   AssignOp -> GGEQ
Rule 173   AssignOp -> EQUAL
Rule 174   IfStmt -> IF Expression Block ElseOpt
Rule 175   SimpleStmtOpt -> SimpleStmt SEMICOL
Rule 176   SimpleStmtOpt -> epsilon
Rule 177   ElseOpt -> ELSE IfStmt
Rule 178   ElseOpt -> ELSE Block
Rule 179   ElseOpt -> epsilon
Rule 180   ForStmt -> FOR ConditionBlockOpt Block
Rule 181   ConditionBlockOpt -> epsilon
Rule 182   ConditionBlockOpt -> Condition
Rule 183   ConditionBlockOpt -> ForClause
Rule 184   Condition -> Expression
Rule 185   ForClause -> SimpleStmt SEMICOL ConditionOpt SEMICOL SimpleStmt
Rule 186   ConditionOpt -> epsilon
Rule 187   ConditionOpt -> Condition
Rule 188   RangeClause -> ExpressionIdentListOpt RANGE Expression
Rule 189   ExpressionIdentListOpt -> epsilon
Rule 190   ExpressionIdentListOpt -> ExpressionIdentifier
Rule 191   ExpressionIdentifier -> ExpressionList EQUAL
Rule 192   ReturnStmt -> RETURN ExpressionListPureOpt
Rule 193   ExpressionListPureOpt -> ExpressionList
Rule 194   ExpressionListPureOpt -> epsilon
Rule 195   BreakStmt -> BREAK LabelOpt
Rule 196   ContinueStmt -> CONTINUE LabelOpt
Rule 197   LabelOpt -> Label
Rule 198   LabelOpt -> epsilon
Rule 199   GotoStmt -> GOTO Label
Rule 200   Source -> PackageClause SEMICOL ImportDeclRep TopLevelDeclRep
Rule 201   ImportDeclRep -> epsilon
Rule 202   ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL
Rule 203   TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL
Rule 204   TopLevelDeclRep -> epsilon
Rule 205   PackageClause -> PACKAGE PackageName
Rule 206   PackageName -> IDENTIFIER
Rule 207   ImportDecl -> IMPORT ImportSpec
Rule 208   ImportDecl -> IMPORT LPAREN ImportSpecRep RPAREN
Rule 209   ImportSpecRep -> ImportSpecRep ImportSpec SEMICOL
Rule 210   ImportSpecRep -> epsilon
Rule 211   ImportSpec -> PackageNameDotOpt ImportPath
Rule 212   PackageNameDotOpt -> DOT
Rule 213   PackageNameDotOpt -> PackageName
Rule 214   PackageNameDotOpt -> epsilon
Rule 215   ImportPath -> STRING
Rule 216   epsilon -> <empty>

Terminals, with rules where they appear

AMPAMP               : 114
AMPCAR               : 131
AMPCAREQ             : 
AMPEQ                : 168
AMPERS               : 128 139
BREAK                : 195
CAREQ                : 170
CARET                : 124
CASE                 : 
CHAN                 : 
COLON                : 105 156
COLONEQ              : 75
COMMA                : 36 37 57 110
CONST                : 49 50
CONSTANT             : 
CONTINUE             : 196
DDD                  : 
DEFAULT              : 
DEFER                : 
DIVIDE               : 126
DIVIDEEQ             : 166
DOT                  : 103 212
ELSE                 : 177 178
EQEQ                 : 115
EQUAL                : 54 65 72 73 173 191
FALLTHROUGH          : 
FLOAT                : 91
FOR                  : 180
FUNC                 : 24 76 77
GEQ                  : 120
GG                   : 130
GGEQ                 : 172
GO                   : 
GOTO                 : 199
GREAT                : 118
IDENTIFIER           : 56 57 65 66 75 78 95 103 157 206
IF                   : 174
IMAGINARY            : 92
IMPORT               : 207 208
INTEGER              : 90
INTERFACE            : 
LBRACE               : 15 40
LBRACK               : 12 104 105
LEQ                  : 119
LESS                 : 117
LL                   : 129
LLEQ                 : 171
LMINUS               : 
LPAREN               : 4 30 50 60 68 83 96 106 208
MAP                  : 
MINUS                : 122 137
MINUSEQ              : 164
MINUSMIN             : 160
MOD                  : 127
MODEQ                : 167
NOT                  : 140
NOTEQ                : 116
OR                   : 123
OREQ                 : 169
OROR                 : 113
PACKAGE              : 205
PLUS                 : 121 136
PLUSEQ               : 163
PLUSPLUS             : 159
RANGE                : 188
RBRACE               : 15 40
RBRACK               : 12 104 105
RETURN               : 192
RPAREN               : 4 30 50 60 68 83 96 106 208
RUNE                 : 93
SELECT               : 
SEMICOL              : 16 42 51 61 69 175 185 185 200 202 203 209
STRING               : 21 94 215
STRUCT               : 15
SWITCH               : 
TIMES                : 22 125 138
TIMESEQ              : 165
TYPE                 : 59 60
TYPEX                : 5
VAR                  : 67 68
error                : 

Nonterminals, with rules where they appear

AliasDecl            : 63
Arguments            : 102
ArrayLength          : 12
ArrayType            : 6
AssignOp             : 162
Assignment           : 154
BaseType             : 22
BasicLit             : 84
Block                : 80 148 174 178 180
BreakStmt            : 145
Condition            : 182 187
ConditionBlockOpt    : 180
ConditionOpt         : 185
ConstDecl            : 44
ConstSpec            : 49 51
ConstSpecRep         : 50 51
ContinueStmt         : 146
Conversion           : 98
Declaration          : 47 141
ElementType          : 12
ElseOpt              : 174
Expression           : 13 75 83 96 104 109 110 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 158 159 160 174 184 188
ExpressionIdentListOpt : 188
ExpressionIdentifier : 190
ExpressionList       : 54 72 73 107 161 161 191 193
ExpressionListOpt    : 71
ExpressionListPureOpt : 192
ExpressionListTypeOpt : 106
ExpressionOpt        : 105 105
ExpressionRep        : 109 110
ExpressionStmt       : 152
FieldDecl            : 16
FieldDeclRep         : 15 16
FloatLiteral         : 86
ForClause            : 183
ForStmt              : 150
Function             : 76
FunctionBody         : 79
FunctionDecl         : 48
FunctionName         : 76 77
FunctionType         : 9
GotoStmt             : 147
IdentifierList       : 18 34 38 53 71 72
IdentifierRep        : 56 57
IfStmt               : 149 177
ImgLiteral           : 87
ImportDecl           : 202
ImportDeclRep        : 200 202
ImportPath           : 211
ImportSpec           : 207 209
ImportSpecRep        : 208 209
IncDecStmt           : 153
Index                : 100
IntLiteral           : 85
Label                : 156 197 199
LabelOpt             : 195 196
LabeledStmt          : 142
Literal              : 81
Operand              : 97
OperandName          : 82
PackageClause        : 200
PackageName          : 205 213
PackageNameDotOpt    : 211
ParameterDecl        : 36 37 37
ParameterDeclCommaRep : 35 36
ParameterListOpt     : 30
Parameters           : 25 28
ParametersList       : 31
PointerType          : 8
PrimaryExpr          : 99 100 101 102 134
RangeClause          : 
Result               : 26
ResultOpt            : 25
ReturnStmt           : 144
RuneLiteral          : 88
Selector             : 99
ShortVarDecl         : 155
Signature            : 24 77 79
SimpleStmt           : 143 175 185 185
SimpleStmtOpt        : 
Slice                : 101
Source               : 1
Statement            : 42 156
StatementList        : 40
StatementRep         : 41 42
StringLiteral        : 89
StructType           : 7
Tag                  : 19
TagOpt               : 18
TopLevelDecl         : 203
TopLevelDeclRep      : 200 203
Type                 : 4 10 14 18 23 29 33 34 38 39 65 66 71 96
TypeDecl             : 45
TypeDef              : 64
TypeExprListOpt      : 53
TypeLit              : 3
TypeName             : 2
TypeOpt              : 54
TypeSpec             : 59 61
TypeSpecRep          : 60 61
UnaryExpr            : 112 135
UnaryOp              : 135
VarDecl              : 46
VarSpec              : 67 69
VarSpecRep           : 68 69
assign_op            : 161
epsilon              : 11 17 20 27 32 43 52 55 58 62 70 74 108 111 133 151 176 179 181 186 189 194 198 201 204 210 214
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . Source
    (200) Source -> . PackageClause SEMICOL ImportDeclRep TopLevelDeclRep
    (205) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    Source                         shift and go to state 3
    start                          shift and go to state 4

state 1

    (200) Source -> PackageClause . SEMICOL ImportDeclRep TopLevelDeclRep

    SEMICOL         shift and go to state 5


state 2

    (205) PackageClause -> PACKAGE . PackageName
    (206) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    PackageName                    shift and go to state 6

state 3

    (1) start -> Source .

    $end            reduce using rule 1 (start -> Source .)


state 4

    (0) S' -> start .



state 5

    (200) Source -> PackageClause SEMICOL . ImportDeclRep TopLevelDeclRep
    (201) ImportDeclRep -> . epsilon
    (202) ImportDeclRep -> . ImportDeclRep ImportDecl SEMICOL
    (216) epsilon -> .

    IMPORT          reduce using rule 216 (epsilon -> .)
    FUNC            reduce using rule 216 (epsilon -> .)
    CONST           reduce using rule 216 (epsilon -> .)
    TYPE            reduce using rule 216 (epsilon -> .)
    VAR             reduce using rule 216 (epsilon -> .)
    $end            reduce using rule 216 (epsilon -> .)

    ImportDeclRep                  shift and go to state 9
    epsilon                        shift and go to state 8

state 6

    (205) PackageClause -> PACKAGE PackageName .

    SEMICOL         reduce using rule 205 (PackageClause -> PACKAGE PackageName .)


state 7

    (206) PackageName -> IDENTIFIER .

    SEMICOL         reduce using rule 206 (PackageName -> IDENTIFIER .)
    STRING          reduce using rule 206 (PackageName -> IDENTIFIER .)


state 8

    (201) ImportDeclRep -> epsilon .

    IMPORT          reduce using rule 201 (ImportDeclRep -> epsilon .)
    FUNC            reduce using rule 201 (ImportDeclRep -> epsilon .)
    CONST           reduce using rule 201 (ImportDeclRep -> epsilon .)
    TYPE            reduce using rule 201 (ImportDeclRep -> epsilon .)
    VAR             reduce using rule 201 (ImportDeclRep -> epsilon .)
    $end            reduce using rule 201 (ImportDeclRep -> epsilon .)


state 9

    (200) Source -> PackageClause SEMICOL ImportDeclRep . TopLevelDeclRep
    (202) ImportDeclRep -> ImportDeclRep . ImportDecl SEMICOL
    (203) TopLevelDeclRep -> . TopLevelDeclRep TopLevelDecl SEMICOL
    (204) TopLevelDeclRep -> . epsilon
    (207) ImportDecl -> . IMPORT ImportSpec
    (208) ImportDecl -> . IMPORT LPAREN ImportSpecRep RPAREN
    (216) epsilon -> .

    IMPORT          shift and go to state 13
    FUNC            reduce using rule 216 (epsilon -> .)
    CONST           reduce using rule 216 (epsilon -> .)
    TYPE            reduce using rule 216 (epsilon -> .)
    VAR             reduce using rule 216 (epsilon -> .)
    $end            reduce using rule 216 (epsilon -> .)

    TopLevelDeclRep                shift and go to state 10
    epsilon                        shift and go to state 11
    ImportDecl                     shift and go to state 12

state 10

    (200) Source -> PackageClause SEMICOL ImportDeclRep TopLevelDeclRep .
    (203) TopLevelDeclRep -> TopLevelDeclRep . TopLevelDecl SEMICOL
    (47) TopLevelDecl -> . Declaration
    (48) TopLevelDecl -> . FunctionDecl
    (44) Declaration -> . ConstDecl
    (45) Declaration -> . TypeDecl
    (46) Declaration -> . VarDecl
    (76) FunctionDecl -> . FUNC FunctionName Function
    (77) FunctionDecl -> . FUNC FunctionName Signature
    (49) ConstDecl -> . CONST ConstSpec
    (50) ConstDecl -> . CONST LPAREN ConstSpecRep RPAREN
    (59) TypeDecl -> . TYPE TypeSpec
    (60) TypeDecl -> . TYPE LPAREN TypeSpecRep RPAREN
    (67) VarDecl -> . VAR VarSpec
    (68) VarDecl -> . VAR LPAREN VarSpecRep RPAREN

    $end            reduce using rule 200 (Source -> PackageClause SEMICOL ImportDeclRep TopLevelDeclRep .)
    FUNC            shift and go to state 20
    CONST           shift and go to state 14
    TYPE            shift and go to state 23
    VAR             shift and go to state 21

    TypeDecl                       shift and go to state 19
    VarDecl                        shift and go to state 22
    FunctionDecl                   shift and go to state 15
    TopLevelDecl                   shift and go to state 16
    Declaration                    shift and go to state 17
    ConstDecl                      shift and go to state 18

state 11

    (204) TopLevelDeclRep -> epsilon .

    FUNC            reduce using rule 204 (TopLevelDeclRep -> epsilon .)
    CONST           reduce using rule 204 (TopLevelDeclRep -> epsilon .)
    TYPE            reduce using rule 204 (TopLevelDeclRep -> epsilon .)
    VAR             reduce using rule 204 (TopLevelDeclRep -> epsilon .)
    $end            reduce using rule 204 (TopLevelDeclRep -> epsilon .)


state 12

    (202) ImportDeclRep -> ImportDeclRep ImportDecl . SEMICOL

    SEMICOL         shift and go to state 24


state 13

    (207) ImportDecl -> IMPORT . ImportSpec
    (208) ImportDecl -> IMPORT . LPAREN ImportSpecRep RPAREN
    (211) ImportSpec -> . PackageNameDotOpt ImportPath
    (212) PackageNameDotOpt -> . DOT
    (213) PackageNameDotOpt -> . PackageName
    (214) PackageNameDotOpt -> . epsilon
    (206) PackageName -> . IDENTIFIER
    (216) epsilon -> .

    LPAREN          shift and go to state 25
    DOT             shift and go to state 30
    IDENTIFIER      shift and go to state 7
    STRING          reduce using rule 216 (epsilon -> .)

    ImportSpec                     shift and go to state 26
    epsilon                        shift and go to state 27
    PackageName                    shift and go to state 28
    PackageNameDotOpt              shift and go to state 29

state 14

    (49) ConstDecl -> CONST . ConstSpec
    (50) ConstDecl -> CONST . LPAREN ConstSpecRep RPAREN
    (53) ConstSpec -> . IdentifierList TypeExprListOpt
    (56) IdentifierList -> . IDENTIFIER IdentifierRep

    LPAREN          shift and go to state 32
    IDENTIFIER      shift and go to state 34

    ConstSpec                      shift and go to state 31
    IdentifierList                 shift and go to state 33

state 15

    (48) TopLevelDecl -> FunctionDecl .

    SEMICOL         reduce using rule 48 (TopLevelDecl -> FunctionDecl .)


state 16

    (203) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl . SEMICOL

    SEMICOL         shift and go to state 35


state 17

    (47) TopLevelDecl -> Declaration .

    SEMICOL         reduce using rule 47 (TopLevelDecl -> Declaration .)


state 18

    (44) Declaration -> ConstDecl .

    SEMICOL         reduce using rule 44 (Declaration -> ConstDecl .)


state 19

    (45) Declaration -> TypeDecl .

    SEMICOL         reduce using rule 45 (Declaration -> TypeDecl .)


state 20

    (76) FunctionDecl -> FUNC . FunctionName Function
    (77) FunctionDecl -> FUNC . FunctionName Signature
    (78) FunctionName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 36

    FunctionName                   shift and go to state 37

state 21

    (67) VarDecl -> VAR . VarSpec
    (68) VarDecl -> VAR . LPAREN VarSpecRep RPAREN
    (71) VarSpec -> . IdentifierList Type ExpressionListOpt
    (72) VarSpec -> . IdentifierList EQUAL ExpressionList
    (56) IdentifierList -> . IDENTIFIER IdentifierRep

    LPAREN          shift and go to state 39
    IDENTIFIER      shift and go to state 34

    VarSpec                        shift and go to state 38
    IdentifierList                 shift and go to state 40

state 22

    (46) Declaration -> VarDecl .

    SEMICOL         reduce using rule 46 (Declaration -> VarDecl .)


state 23

    (59) TypeDecl -> TYPE . TypeSpec
    (60) TypeDecl -> TYPE . LPAREN TypeSpecRep RPAREN
    (63) TypeSpec -> . AliasDecl
    (64) TypeSpec -> . TypeDef
    (65) AliasDecl -> . IDENTIFIER EQUAL Type
    (66) TypeDef -> . IDENTIFIER Type

    LPAREN          shift and go to state 43
    IDENTIFIER      shift and go to state 45

    TypeSpec                       shift and go to state 44
    TypeDef                        shift and go to state 41
    AliasDecl                      shift and go to state 42

state 24

    (202) ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .

    IMPORT          reduce using rule 202 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    FUNC            reduce using rule 202 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    CONST           reduce using rule 202 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    TYPE            reduce using rule 202 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    VAR             reduce using rule 202 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    $end            reduce using rule 202 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)


state 25

    (208) ImportDecl -> IMPORT LPAREN . ImportSpecRep RPAREN
    (209) ImportSpecRep -> . ImportSpecRep ImportSpec SEMICOL
    (210) ImportSpecRep -> . epsilon
    (216) epsilon -> .

    RPAREN          reduce using rule 216 (epsilon -> .)
    DOT             reduce using rule 216 (epsilon -> .)
    IDENTIFIER      reduce using rule 216 (epsilon -> .)
    STRING          reduce using rule 216 (epsilon -> .)

    epsilon                        shift and go to state 46
    ImportSpecRep                  shift and go to state 47

state 26

    (207) ImportDecl -> IMPORT ImportSpec .

    SEMICOL         reduce using rule 207 (ImportDecl -> IMPORT ImportSpec .)


state 27

    (214) PackageNameDotOpt -> epsilon .

    STRING          reduce using rule 214 (PackageNameDotOpt -> epsilon .)


state 28

    (213) PackageNameDotOpt -> PackageName .

    STRING          reduce using rule 213 (PackageNameDotOpt -> PackageName .)


state 29

    (211) ImportSpec -> PackageNameDotOpt . ImportPath
    (215) ImportPath -> . STRING

    STRING          shift and go to state 49

    ImportPath                     shift and go to state 48

state 30

    (212) PackageNameDotOpt -> DOT .

    STRING          reduce using rule 212 (PackageNameDotOpt -> DOT .)


state 31

    (49) ConstDecl -> CONST ConstSpec .

    SEMICOL         reduce using rule 49 (ConstDecl -> CONST ConstSpec .)


state 32

    (50) ConstDecl -> CONST LPAREN . ConstSpecRep RPAREN
    (51) ConstSpecRep -> . ConstSpecRep ConstSpec SEMICOL
    (52) ConstSpecRep -> . epsilon
    (216) epsilon -> .

    RPAREN          reduce using rule 216 (epsilon -> .)
    IDENTIFIER      reduce using rule 216 (epsilon -> .)

    ConstSpecRep                   shift and go to state 50
    epsilon                        shift and go to state 51

state 33

    (53) ConstSpec -> IdentifierList . TypeExprListOpt
    (54) TypeExprListOpt -> . TypeOpt EQUAL ExpressionList
    (55) TypeExprListOpt -> . epsilon
    (10) TypeOpt -> . Type
    (11) TypeOpt -> . epsilon
    (216) epsilon -> .
    (2) Type -> . TypeName
    (3) Type -> . TypeLit
    (4) Type -> . LPAREN Type RPAREN
    (5) TypeName -> . TYPEX
    (6) TypeLit -> . ArrayType
    (7) TypeLit -> . StructType
    (8) TypeLit -> . PointerType
    (9) TypeLit -> . FunctionType
    (12) ArrayType -> . LBRACK ArrayLength RBRACK ElementType
    (15) StructType -> . STRUCT LBRACE FieldDeclRep RBRACE
    (22) PointerType -> . TIMES BaseType
    (24) FunctionType -> . FUNC Signature

    SEMICOL         reduce using rule 216 (epsilon -> .)
    EQUAL           reduce using rule 216 (epsilon -> .)
    LPAREN          shift and go to state 61
    TYPEX           shift and go to state 57
    LBRACK          shift and go to state 64
    STRUCT          shift and go to state 63
    TIMES           shift and go to state 60
    FUNC            shift and go to state 52

    StructType                     shift and go to state 58
    TypeOpt                        shift and go to state 62
    ArrayType                      shift and go to state 53
    TypeName                       shift and go to state 56
    TypeLit                        shift and go to state 55
    TypeExprListOpt                shift and go to state 65
    epsilon                        shift and go to state 59
    PointerType                    shift and go to state 66
    FunctionType                   shift and go to state 67
    Type                           shift and go to state 54

state 34

    (56) IdentifierList -> IDENTIFIER . IdentifierRep
    (57) IdentifierRep -> . IdentifierRep COMMA IDENTIFIER
    (58) IdentifierRep -> . epsilon
    (216) epsilon -> .

    COMMA           reduce using rule 216 (epsilon -> .)
    LPAREN          reduce using rule 216 (epsilon -> .)
    TYPEX           reduce using rule 216 (epsilon -> .)
    LBRACK          reduce using rule 216 (epsilon -> .)
    STRUCT          reduce using rule 216 (epsilon -> .)
    TIMES           reduce using rule 216 (epsilon -> .)
    FUNC            reduce using rule 216 (epsilon -> .)
    EQUAL           reduce using rule 216 (epsilon -> .)
    SEMICOL         reduce using rule 216 (epsilon -> .)

    epsilon                        shift and go to state 68
    IdentifierRep                  shift and go to state 69

state 35

    (203) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .

    FUNC            reduce using rule 203 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    CONST           reduce using rule 203 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    TYPE            reduce using rule 203 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    VAR             reduce using rule 203 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    $end            reduce using rule 203 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)


state 36

    (78) FunctionName -> IDENTIFIER .

    LPAREN          reduce using rule 78 (FunctionName -> IDENTIFIER .)


state 37

    (76) FunctionDecl -> FUNC FunctionName . Function
    (77) FunctionDecl -> FUNC FunctionName . Signature
    (79) Function -> . Signature FunctionBody
    (25) Signature -> . Parameters ResultOpt
    (30) Parameters -> . LPAREN ParameterListOpt RPAREN

    LPAREN          shift and go to state 73

    Function                       shift and go to state 70
    Parameters                     shift and go to state 71
    Signature                      shift and go to state 72

state 38

    (67) VarDecl -> VAR VarSpec .

    SEMICOL         reduce using rule 67 (VarDecl -> VAR VarSpec .)


state 39

    (68) VarDecl -> VAR LPAREN . VarSpecRep RPAREN
    (69) VarSpecRep -> . VarSpecRep VarSpec SEMICOL
    (70) VarSpecRep -> . epsilon
    (216) epsilon -> .

    RPAREN          reduce using rule 216 (epsilon -> .)
    IDENTIFIER      reduce using rule 216 (epsilon -> .)

    VarSpecRep                     shift and go to state 74
    epsilon                        shift and go to state 75

state 40

    (71) VarSpec -> IdentifierList . Type ExpressionListOpt
    (72) VarSpec -> IdentifierList . EQUAL ExpressionList
    (2) Type -> . TypeName
    (3) Type -> . TypeLit
    (4) Type -> . LPAREN Type RPAREN
    (5) TypeName -> . TYPEX
    (6) TypeLit -> . ArrayType
    (7) TypeLit -> . StructType
    (8) TypeLit -> . PointerType
    (9) TypeLit -> . FunctionType
    (12) ArrayType -> . LBRACK ArrayLength RBRACK ElementType
    (15) StructType -> . STRUCT LBRACE FieldDeclRep RBRACE
    (22) PointerType -> . TIMES BaseType
    (24) FunctionType -> . FUNC Signature
